Bug 818629: Don't use "g_free" as finalize function in xt_event_funcs - just let refcounting take care of cleaning up. r=karlt